# trackagi.github.io

./: .editorconfig  .gitignore  AGENTS.md  Agents.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  check_urls.py  milestone.schema.json  pyproject.toml  run.sh
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  milestone-request.yml
.github/workflows/: deploy.yml
data/2010/: relu-rbm.json
data/2012/: alexnet-imagenet.json
data/2013/: alexnet-imagenet.json  dropout-regularization.json  word2vec.json
data/2014/: adam-optimizer.json  gan-introduced.json  vggnet.json
data/2015/: alphago-fan-hui.json  batch-normalization.json  resnet.json  tensorflow-launch.json
data/2016/: alphago-lee-sedol.json  gnmt-translation.json  openai-universe.json
data/2017/: alphago-zero.json  capsule-networks.json  transformer-attention.json
data/2018/: bert.json  gpt-1.json  gpt-2-preview.json
data/2019/: ctrl-salesforce.json  gpt-2-full.json  roberta.json  t5.json
data/2020/: alphafold2.json  column-subset-selection.json  gpt-3.json
data/2021/: codex.json  dall-e.json  github-copilot.json  swin-transformer.json  switch-transformers.json
data/2022/: chatgpt-launch.json  chinchilla-scaling.json  dall-e-2.json  flamingo-deepmind.json  gato-generalist.json  instructgpt-rlhf.json  midjourney-v1.json  stable-diffusion.json
data/2023/: adobe-firefly.json  bing-chat-gpt4.json  chatgpt-100m-users.json  chatgpt-plus.json  claude-2.json  dall-e-3.json  gemini-1-pro.json  (+10 more)
scripts/: build.py  validate.py
(+57 files in other folders)
